<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTURI"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:text="@string/details_URI"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbURI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTSalida"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:text="@string/details_salida"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbSalida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTFechasalida"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:text="@string/details_fechasalida"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbFechasalida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTLlegada"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:text="@string/details_llegada"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbLlegada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTPasos"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:text="@string/details_pasos"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbPasos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btMap"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:text="@string/details_button" />

        </LinearLayout>
</ScrollView>